--- a/spaces.html
+++ b/spaces.html
@@ -38,7 +38,7 @@
 
       </div>
     <br><br>
-    <footer> <p style="text-align: right;"><small> &copy; A. Bordonaro 5.7.2024 </small></p>
+    <footer> <p style="text-align: right;"><small> &copy; A. Bordonaro 5.7.2024 </small></p></footer>  
     <script type="module">
 
       var lotName = window.location.search.split("=")[1];
