--- a/lots.html
+++ b/lots.html
@@ -40,7 +40,7 @@
       </div>
         <br><br>
 
-    <footer> <p style="text-align: right;"><small> &copy; A. Bordonaro 5.7.2024 </small></p>
+    <footer> <p style="text-align: right;"><small> &copy; A. Bordonaro 5.7.2024 </small></p></footer>
   <script type="module">
     const response = await fetch("parking.json");
     const data = await response.json();
