--- a/404.html
+++ b/404.html
@@ -33,7 +33,7 @@
     <p id="404BodyText">Whoops! We must have parked that page in the wrong spot. <br><br> Return to <a href="parking.html">Home</a> or browse available <a href="lots.html">parking lots</a></p>
 
     </div>
-    <footer> <p style="text-align: right;"><small> &copy; A. Bordonaro 5.7.2024 </small></p>
+    <footer> <p style="text-align: right;"><small> &copy; A. Bordonaro 5.7.2024 </small></p></footer>
 </body>
 
 </html>
